Login No Funcional

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -3,16 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Login</title>
 </head>
-<body>
-    <h2>Iniciar Sesión</h2>
-    <form action="/login" method="post">
-        <label for="username">Usuario:</label><br>
-        <input type="text" id="username" name="username"><br>
-        <label for="password">Contraseña:</label><br>
-        <input type="password" id="password" name="password"><br><br>
-        <input type="submit" value="Iniciar Sesión">
-    </form>
+<body>    
+    <div class="container">        
+        <form action="/doLogin" method="post">
+            <h2>Iniciar Sesión</h2>
+            <div class="form-group">
+                <label for="userId">Usuario:</label><br>
+                <input type="text" id="userId" name="userId" class="form-control" required><br>
+            </div>
+            <div>
+                <label for="password">Contraseña:</label><br>
+                <input type="password" id="password" name="password" class="form-control" required><br><br>
+            </div>
+            <input type="submit" value="Login" class="btn">
+        </form>
+    </div>
 </body>
 </html>
